--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
               <div class="w-100 h-100">
 
-                <img class="w-100" height="538px" src="../enterprise-Wet/asset/img/neomorphism vectors.png" alt="neo"
+                <img class="w-100" height="538px" src="./asset/img/neomorphism vectors.png" alt="neo"
                 style="filter: drop-shadow(0px 0px 8px #9c948bb3);
                 -webkit-filter: drop-shadow(0px 0px 8px #9c948bb3);
                 -moz-filter: drop-shadow(0px 0px 8px #9c948bb3);"
