--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                 </h2>
 
                 <div class="w-100 d-flex justify-content-center">
-                  <img src="./enterprise-Wet/asset/img/Divider.png" alt="Divider">
+                  <img src="./asset/img/Divider.png" alt="Divider">
                 </div>
       
               </div>
@@ -388,7 +388,7 @@
 
                 <div class="w-100">
 
-                  <img class="w-100" src="./enterprise-Wet/asset/img/img.png" alt="img">
+                  <img class="w-100" src="./asset/img/img.png" alt="img">
 
                 </div>
 
@@ -437,7 +437,7 @@
 
               <div class="w-100 d-flex justify-content-center">
 
-                <img src="./enterprise-Wet/asset/img/long img.png" alt="img" style="margin-top: -110px;">
+                <img src="./asset/img/long img.png" alt="img" style="margin-top: -110px;">
 
               </div>
 
@@ -454,7 +454,7 @@
 
               <div class="w-100 d-flex justify-content-center pt-3">
 
-                <img src="./enterprise-Wet/asset/img/Divider.png" alt="div">
+                <img src="./asset/img/Divider.png" alt="div">
 
               </div>
 
@@ -529,7 +529,7 @@
 
               <div class="w-100 d-flex justify-content-center">
 
-                <img src="./enterprise-Wet/asset/img/Divider.png" alt="div">
+                <img src="./asset/img/Divider.png" alt="div">
 
               </div>
 
@@ -555,7 +555,7 @@
 
               <div class="w-100">
 
-                <img class="w-100" src="./enterprise-Wet/asset/img/img.png" alt="img">
+                <img class="w-100" src="./asset/img/img.png" alt="img">
 
               </div>
 
@@ -593,7 +593,7 @@
 
     <div class="w-100 mt-5 position-relative pb-5" style="overflow: hidden;">
 
-      <img class="position-absolute" src="./enterprise-Wet/asset/img/ear.png" alt="ear" style="left: -190px; top: 0; z-index: -50;">
+      <img class="position-absolute" src="./asset/img/ear.png" alt="ear" style="left: -190px; top: 0; z-index: -50;">
 
       <div class="container">
 
@@ -605,7 +605,7 @@
 
             <div class="w-100 d-flex justify-content-center">
 
-              <img src="./enterprise-Wet/asset/img/Divider.png" alt="div">
+              <img src="./asset/img/Divider.png" alt="div">
 
             </div>
 
@@ -615,7 +615,7 @@
 
             <div class="w-100">
 
-              <img class="w-100" src="./enterprise-Wet/asset/img/Group 70.png" alt="70">
+              <img class="w-100" src="./asset/img/Group 70.png" alt="70">
 
             </div>
 
@@ -625,7 +625,7 @@
 
             <div class="w-100">
 
-              <img class="w-100" src="./enterprise-Wet/asset/img/Group 71.png" alt="71">
+              <img class="w-100" src="./asset/img/Group 71.png" alt="71">
 
             </div>
 
@@ -635,7 +635,7 @@
 
             <div class="w-100">
 
-              <img class="w-100" src="./enterprise-Wet/asset/img/Group 72.png" alt="72">
+              <img class="w-100" src="./asset/img/Group 72.png" alt="72">
 
             </div>
 
@@ -648,7 +648,7 @@
 
             <div class="w-100 d-flex justify-content-center">
 
-              <img src="./enterprise-Wet/asset/img/Divider.png" alt="div">
+              <img src="./asset/img/Divider.png" alt="div">
 
             </div>
 
@@ -658,7 +658,7 @@
 
             <div class="w-100 cardNeo">
 
-              <img src="./enterprise-Wet/asset/img/icon.png" alt="icon">
+              <img src="./asset/img/icon.png" alt="icon">
 
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
                 molestiae quas vel sint commodi epudiandae raesentium
@@ -675,7 +675,7 @@
 
             <div class="w-100 cardNeo">
 
-              <img src="./enterprise-Wet/asset/img/icon.png" alt="icon">
+              <img src="./asset/img/icon.png" alt="icon">
 
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
                 molestiae quas vel sint commodi epudiandae raesentium
@@ -692,7 +692,7 @@
 
             <div class="w-100 cardNeo">
 
-              <img src="./enterprise-Wet/asset/img/icon.png" alt="icon">
+              <img src="./asset/img/icon.png" alt="icon">
 
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
                 molestiae quas vel sint commodi epudiandae raesentium
